--- a/res/layout/square_comment_item.xml
+++ b/res/layout/square_comment_item.xml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp" >
+    android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/square_comment_word"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/comment_user_pic"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:src="@drawable/user_pic4" 
+        android:layout_gravity="center_vertical"/>
+
+    <LinearLayout 
+        android:layout_width="0dp"
+        android:layout_weight="6"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="好的" />
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        >
+        <RelativeLayout 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+            
+            <TextView 
+                android:id="@+id/comment_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="海绵宝宝"/>
+            <TextView 
+                android:id="@+id/comment_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="2015年8月25日"/>
+        </RelativeLayout>
+        
+        <TextView 
+            android:id="@+id/comment_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="hahahahhhahahah"
+            android:padding="5dp"
+            />
+        
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
