--- a/res/layout/activity_goods_detail.xml
+++ b/res/layout/activity_goods_detail.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/goods_detail_img"
                     android:layout_width="match_parent"
                     android:layout_height="160dp"
-                    android:src="@drawable/a" />
+                    android:src="@drawable/ic_launcher" />
             </RelativeLayout>
 
             <RelativeLayout
