--- a/res/layout/activity_freewifi.xml
+++ b/res/layout/activity_freewifi.xml
@@ -21,7 +21,7 @@
         android:choiceMode="singleChoice"
         android:divider="#efeff4"
         android:dividerHeight="3px"
-        android:drawSelectorOnTop="false"
+        android:drawSelectorOnTop="true"
         android:listSelector="#00000000" />
 
 </LinearLayout>
