--- a/res/layout/store_listview.xml
+++ b/res/layout/store_listview.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    
+    <com.whut.util.PullToRefreshListView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/Store_ListView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,5 +10,4 @@
     android:divider="#606569"
     android:dividerHeight="0dp"
     android:listSelector="#00000000" >
-
-</ListView>
+</com.whut.util.PullToRefreshListView >
