--- a/res/layout/learder_item.xml
+++ b/res/layout/learder_item.xml
@@ -3,65 +3,77 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
-    <LinearLayout 
+
+    <LinearLayout
         android:id="@+id/place_freewifi_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="3dp"
         android:layout_weight="1"
         android:onClick="onClick"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
-        <ImageView 
+        android:orientation="vertical" >
+
+        <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/mine_logo"/>
-        <TextView 
+            android:src="@drawable/icon_freewifi" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="免费wifi"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="3dp"
+            android:text="免费wifi" />
     </LinearLayout>
-    <LinearLayout 
+
+    <LinearLayout
         android:id="@+id/place_innerlead_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="3dp"
         android:layout_weight="1"
         android:onClick="onClick"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
-        <ImageView 
+        android:orientation="vertical" >
+
+        <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/mine_logo"/>
-        <TextView 
+            android:src="@drawable/icon_store" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="室内导航"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="3dp"
+            android:text="室内导航" />
     </LinearLayout>
-    <LinearLayout 
+
+    <LinearLayout
         android:id="@+id/place_store_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="3dp"
         android:layout_weight="1"
         android:onClick="onClick"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
-        <ImageView 
+        android:orientation="vertical" >
+
+        <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/mine_logo"/>
-        <TextView 
+            android:src="@drawable/icon_navigation" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="店铺"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="3dp"
+            android:text="店铺" />
     </LinearLayout>
 
 </LinearLayout>
