--- a/res/layout/post_store_popupwindow_item.xml
+++ b/res/layout/post_store_popupwindow_item.xml
@@ -5,18 +5,12 @@
     android:background="@color/transparent_background"
     android:orientation="vertical" >
 
-    <View
-        android:id="@+id/post_store_popupwindow_blank_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/transparent_background" >
-    </View>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:background="#ffffff"
         android:orientation="vertical" >
 
