--- a/res/layout/goods_detail_titlebar.xml
+++ b/res/layout/goods_detail_titlebar.xml
@@ -32,6 +32,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:scaleType="fitXY"
+        android:onClick="onClick"
         android:src="@drawable/share_icon"/>
 
 </RelativeLayout>
